<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:stretchColumns="1,2"
    tools:context=".newplayer">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/DescriptionUser"
            app:srcCompat="@mipmap/contact_image" />
        <android.support.design.widget.TextInputLayout
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EditName"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">

            <EditText
                android:id="@+id/editPName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EditPName"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">

            <EditText
                android:id="@+id/editNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EditNickNane"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/DescriptionImage"
            app:srcCompat="@mipmap/photo_image" />

        <ImageView
            android:id="@+id/imageProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/DescriptionProfilePic"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/profile_image" />

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MiEstilo"
            android:text="@string/buttonPicChange" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/DescriptionPhone"
            app:srcCompat="@mipmap/phone_image" />

        <android.support.design.widget.TextInputLayout
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:hint="@string/EditPhone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_column="2"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/DescriptionEmail"
            app:srcCompat="@mipmap/email_image" />

        <android.support.design.widget.TextInputLayout
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EditEmail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>
</TableLayout>
</LinearLayout>